<resources>
    <string name="app_name">needthis</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">E-mail</string>
    <string name="enter_pass">Password</string>
    <string name="already_registered">Already Registered ? Sign In</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registery Yet? Sign Up</string>
    <string name="profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Enter Your Name</string>
    <string name="save">Save</string>
    <string name="add_post">Add Post</string>
    <string name="enter_caption">Write Text Here ...</string>
    <string name="add_comment">Add Comment</string>
    <string name="write_Comment">Write Comment</string>
</resources>